# simple_pnp_isaac_sim_moveit2

./: .gitignore  README.md  panda_isaac.usd  panda_isaac_camera.usd
isaac_moveit_package/: CMakeLists.txt  package.xml
isaac_moveit_package/launch/: cube_client.launch.py  cube_gripper.launch.py  cube_gripper_camera.launch.py  isaac_moveit.launch.py  motion.launch.py
isaac_moveit_package/scripts/: cube_detector.py
isaac_moveit_package/src/: cube_client.cpp  cube_client_position.cpp  cube_gripper.cpp  cube_gripper_camera.cpp  motion.cpp
isaac_moveit_package/srv/: CubePose.srv
moveit_resources/panda_description/urdf/panda/configuration/: panda_base.usd  panda_physics.usd
