<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>isaac_moveit_package</name>
  <version>0.1.0</version>

  <description>The isaac_moveit package</description>

  <maintainer email="isaac-sim-maintainers@nvidia.com">Isaac Sim</maintainer>

  <license>Apache-2.0</license>

  <url type="Documentation">
    https://docs.isaacsim.omniverse.nvidia.com/6.0.0/index.html
  </url>

  <url type="Forums">
    https://forums.developer.nvidia.com/c/omniverse/simulation/69
  </url>

  <!-- ========================= -->
  <!-- BUILD TOOL -->
  <!-- ========================= -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ========================= -->
  <!-- ROS2 CORE -->
  <!-- ========================= -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- ========================= -->
  <!-- MOVEIT -->
  <!-- ========================= -->
  <depend>moveit</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_resources_panda_moveit_config</depend>
  <depend>moveit_simple_controller_manager</depend>

  <!-- ========================= -->
  <!-- TF2 (for cube-yaw orientation math) -->
  <!-- ========================= -->
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- ========================= -->
  <!-- ROS2 CONTROL -->
  <!-- ========================= -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>topic_based_ros2_control</depend>

  <!-- ========================= -->
  <!-- VISUALIZATION -->
  <!-- ========================= -->
  <depend>robot_state_publisher</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>rviz2</exec_depend>

  <!-- ========================= -->
  <!-- LAUNCH -->
  <!-- ========================= -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- ========================= -->
  <!-- 🔥 ROSIDL (CRITICAL FIX) -->
  <!-- ========================= -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- ========================= -->
  <!-- EXPORT -->
  <!-- ========================= -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
